# ergo-maps

./: .gitignore  LICENSE  README.md  requirements.txt
docker/: Dockerfile_u24_cu128  build_docker.sh  download_checkpoint.py  download_cocopan_checkpoint.py  download_fcclip_clip_weights.py  download_hf_model.py  run.sh
ros2_vlmaps_interfaces/: CMakeLists.txt  Readme  package.xml
ros2_vlmaps_interfaces/msg/: Color.msg  ObjectQueryResult.msg  VoxelObject.msg
ros2_vlmaps_interfaces/srv/: CameraRGB.srv  EnableMapping.srv  EvaluateMap.srv  IndexMap.srv  LlmQuery.srv  LoadMap.srv  PublishGoal.srv
visual_language_navigation/: package.xml  setup.cfg  setup.py
visual_language_navigation/application/: compress_map.py  evaluation.py  index_map.py  visualize_map_vertex_selection.py
visual_language_navigation/application/eval_gt/: Ground_Truth_Annotations_Maps.ods  Lseg_Ground_Truth_Annotations_Maps.ods
visual_language_navigation/fcclip/: demo.ipynb  requirements.txt
visual_language_navigation/fcclip/configs/coco/panoptic-segmentation/fcclip/: fcclip_convnext_large_eval_ade20k.yaml  fcclip_convnext_large_eval_coco.yaml
visual_language_navigation/fcclip/fcclip/: __init__.py  config.py  fcclip.py
visual_language_navigation/fcclip/fcclip/data/datasets/: __init__.py  openseg_classes.py
visual_language_navigation/fcclip/fcclip/modeling/meta_arch/: fcclip_head.py
visual_language_navigation/fcclip/fcclip/modeling/pixel_decoder/ops/src/cuda/: ms_deform_attn_cuda.cu
visual_language_navigation/fcclip/fcclip/modeling/transformer_decoder/: fcclip_transformer_decoder.py
visual_language_navigation/launch/: build_map.launch.py  extra_camera_tf_pub.launch.py  rviz_vlnav.launch.py  semantic_map_server.launch.py
visual_language_navigation/llm/: chat_agent.py  llm_tools.py  nav_agent.py  yarp_callbacks.py  yarp_interface.py
visual_language_navigation/lseg/modules/models/: lseg_net.py
visual_language_navigation/map/: __init__.py  semantic_map_builder.py  semantic_map_server.py  voxel_feat_map.py
visual_language_navigation/params/: mapping_params.yaml  semantic_map_server_params.yaml
visual_language_navigation/params/rviz/: vlnav.rviz
visual_language_navigation/utils/: camera_utils.py  clip_utils.py  cluster_utils.py  conversion_utils.py  fcclip_utils.py  index_utils.py  lseg_utils.py  mapping_utils.py  traverse_pixels.py  visualize_utils.py
visual_language_navigation/web_chat/: backend.py
visual_language_navigation/web_chat/templates/: index.html
